--- a/src/assets/scss/abstract/_settings.scss
+++ b/src/assets/scss/abstract/_settings.scss
@@ -172,12 +172,12 @@ $shadow-lb: -3px 3px 15px -3px rgba(0, 0, 0, 0.1);
     background-color: $clrbk_lgnd7_p;
 }
 
-.d_lgndAddNew {
+.d_lgnd8 {
     border: 1px solid $color_6;
     background-color: $color_2;
 }
 
-.lgndAddNew_g {
+.d_lgnd8_g {
     color: $color_2;
     background-color: $color_6!important;
 }
