--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -35,6 +35,8 @@
 }
 
 .fields {
+  margin-bottom: 8px;
+
   .lbl {
     padding-left: 13px;
     font-size: 13px;
@@ -43,19 +45,21 @@
     color: #111b2b;
     max-width: 98%;
   }
-  margin-bottom: 8px;
+  .helper_text {
+    visibility: hidden;
+    width: 100%;
+    height: 0;// dinamic= auto
+    padding: 0 0 0 16px;
+    font-size: 12px;
+    line-height: 16px;
+    color: red;
+  }
 }
 
 .input-group-append {
   cursor: pointer;
 }
 
-.helper_text {
-  visibility: hidden;
-  width: 100%;
-  height: auto;
-  padding: 0 0 0 16px;
-  font-size: 12px;
-  line-height: 16px;
-  color: red;
+.form-group{
+  margin: 0;
 }
