--- a/src/assets/scss/components/_card.scss
+++ b/src/assets/scss/components/_card.scss
@@ -1,4 +1,4 @@
-.card_contr {
+.card_lgn0 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto 1fr;
@@ -13,14 +13,14 @@
 
   border: 1px solid $clr1;
   border-radius: 6px;
-  margin: 4px 0;
+  margin: 0 0 4px;
   background: rgba(119, 113, 106, 0.06);
 
   .partner {
     grid-area: partner;
     padding: 0 8px;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 10px;
     line-height: 16px;
     color: $color_1;
   }
@@ -60,14 +60,14 @@
 
   border: 1px solid $clrbk_lgnd1_p;
   border-radius: 6px;
-  margin: 4px 0;
+  margin: 0 0 4px;
   background: rgba(119, 113, 106, 0.06);
 
   .partner {
     grid-area: partner;
     padding: 0 8px;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 10px;
     line-height: 16px;
     color: $clrbk_lgnd1_p;
   }
@@ -102,7 +102,7 @@
   }
 }
 
-.card_lgnd2 {
+.card_lgn2 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto 1fr;
@@ -118,14 +118,14 @@
 
   border: 1px solid $clrbk_lgnd2_p;
   border-radius: 6px;
-  margin: 4px 0;
+  margin: 0 0 4px;
   background: rgba(119, 113, 106, 0.06);
 
   .partner {
     grid-area: partner;
     padding: 0 8px;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 10px;
     line-height: 16px;
     color: $clrbk_lgnd2_p;
   }
@@ -160,7 +160,7 @@
   }
 }
 
-.card_lgnd3 {
+.card_lgn3 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto 1fr;
@@ -176,14 +176,14 @@
 
   border: 1px solid $clrbk_lgnd3_p;
   border-radius: 6px;
-  margin: 4px 0;
+  margin: 0 0 4px;
   background: rgba(119, 113, 106, 0.06);
 
   .partner {
     grid-area: partner;
     padding: 0 8px;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 10px;
     line-height: 16px;
     color: $clrbk_lgnd3_p;
   }
@@ -218,7 +218,7 @@
   }
 }
 
-.card_lgnd4 {
+.card_lgn4 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto 1fr;
@@ -234,14 +234,14 @@
 
   border: 1px solid $clrbk_lgnd4_p;
   border-radius: 6px;
-  margin: 4px 0;
+  margin: 0 0 4px;
   background: rgba(119, 113, 106, 0.06);
 
   .partner {
     grid-area: partner;
     padding: 0 8px;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 10px;
     line-height: 16px;
     color: $clrbk_lgnd4_p;
   }
@@ -276,7 +276,7 @@
   }
 }
 
-.card_lgnd5 {
+.card_lgn5 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto 1fr;
@@ -292,14 +292,14 @@
 
   border: 1px solid $clrbk_lgnd5_p;
   border-radius: 6px;
-  margin: 4px 0;
+  margin: 0 0 4px;
   background: rgba(119, 113, 106, 0.06);
 
   .partner {
     grid-area: partner;
     padding: 0 8px;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 10px;
     line-height: 16px;
     color: $clrbk_lgnd5_p;
   }
@@ -334,30 +334,30 @@
   }
 }
 
-.card_lgnd6 {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto 1fr;
-    grid-auto-columns: 1fr;
-    grid-auto-rows: 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: column;
-    grid-template-areas:
-      "partner"
-      "title"
+.card_lgn6 {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto auto 1fr;
+  grid-auto-columns: 1fr;
+  grid-auto-rows: 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: column;
+  grid-template-areas:
+    "partner"
+    "title"
     "subtitle"
     "cont";
 
   border: 1px solid $clrbk_lgnd6_p;
   border-radius: 6px;
-  margin: 4px 0;
+  margin: 0 0 4px;
   background: rgba(119, 113, 106, 0.06);
 
   .partner {
     grid-area: partner;
     padding: 0 8px;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 10px;
     line-height: 16px;
     color: $clrbk_lgnd6_p;
   }
@@ -392,30 +392,30 @@
   }
 }
 
-.card_lgnd7 {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto 1fr;
-    grid-auto-columns: 1fr;
-    grid-auto-rows: 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: column;
-    grid-template-areas:
-      "partner"
-      "title"
+.card_lgn7 {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto auto 1fr;
+  grid-auto-columns: 1fr;
+  grid-auto-rows: 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: column;
+  grid-template-areas:
+    "partner"
+    "title"
     "subtitle"
     "cont";
 
   border: 1px solid $clrbk_lgnd7_p;
   border-radius: 6px;
-  margin: 4px 0;
+  margin: 0 0 4px;
   background: rgba(119, 113, 106, 0.06);
 
   .partner {
     grid-area: partner;
     padding: 0 8px;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 10px;
     line-height: 16px;
     color: $clrbk_lgnd7_p;
   }
@@ -450,14 +450,14 @@
   }
 }
 
-.card_contr,
+.card_lgn0,
 .card_lgn1,
-.card_lgnd2,
-.card_lgnd3,
-.card_lgnd4,
-.card_lgnd5,
-.card_lgnd6,
-.card_lgnd7 {
+.card_lgn2,
+.card_lgn3,
+.card_lgn4,
+.card_lgn5,
+.card_lgn6,
+.card_lgn7 {
   &:hover {
     cursor: pointer;
   }
