--- a/src/assets/scss/components/_contributions.scss
+++ b/src/assets/scss/components/_contributions.scss
@@ -1,11 +1,13 @@
 .pnl_top {
   display: grid;
+  height: max-content;
   grid-auto-flow: column;
   grid-auto-columns: max-content;
   grid-auto-rows: 1fr;
   grid-template-columns: 1fr;
-  grid-template-rows: auto 19px;
+  grid-template-rows: 1fr 19px;
   gap: 0px 0px;
+  height: 100%;
   grid-template-areas:
     "contributions"
     "line";
@@ -14,11 +16,25 @@
     grid-area: contributions;
     border: 1px solid $clr1;
     border-radius: 10px;
-    padding: 8px 4px 8px 8px;
-    max-height: 35vh;
+    padding: 8px 2px 4px 8px;
     background: rgba(119, 113, 106, 0.04);
+    height: min-content;
+    max-height: 100%;
+    align-self: end;
 
-    /* total width */
+    .listcards {
+      width: 100%;
+      height: auto;
+      max-height: 320px;
+      padding-right: 2px;
+      overflow-y: auto;
+      .cards_contr {
+        width: 100%;
+        height: 100%;
+        overflow-y: auto;
+        padding-right: 4px;
+      }
+      /* total width */
     ::-webkit-scrollbar {
       background-color: $clr2;
       height: 4px;
@@ -42,103 +58,6 @@
     ::-webkit-scrollbar-button {
       display: none;
     }
-
-    .contrs1,
-    .contrs2,
-    .contrs3,
-    .contrs4,
-    .contrs5,
-    .contrs6,
-    .contrs7,
-    .contrs8,
-    .contrs9,
-    .contrs10,
-    .contrs11,
-    .contrs12 {
-      width: 100%;
-      height: 100%;
-      overflow-x: auto;
-      padding-right: 4px;
-    }
-  }
-
-  .line {
-    grid-area: line;
-    background: linear-gradient($clr1, $clr1) no-repeat center/1px 100%;
-  }
-}
-
-.pnl_top1,
-.pnl_top2,
-.pnl_top3,
-.pnl_top4,
-.pnl_top5,
-.pnl_top6,
-.pnl_top7,
-.pnl_top8,
-.pnl_top9,
-.pnl_top10,
-.pnl_top11,
-.pnl_top12 {
-  display: grid;
-  grid-auto-flow: column;
-  grid-auto-columns: max-content;
-  grid-auto-rows: 1fr;
-  grid-template-columns: 1fr;
-  grid-template-rows: 19px auto;
-  gap: 0px 0px;
-  grid-template-areas:
-    "line"
-    "impacts";
-
-  .impacts {
-    grid-area: impacts;
-    border: 1px solid $clr1;
-    border-radius: 10px;
-    padding: 8px 4px 8px 8px;
-    max-height: 35vh;
-    background: rgba(119, 113, 106, 0.04);
-
-    /* total width */
-    ::-webkit-scrollbar {
-      background-color: $clr2;
-      width: 4px;
-      border-radius: 2px;
-    }
-
-    /* background of the scrollbar except button or resizer */
-    ::-webkit-scrollbar-track {
-      background-color: $clr2;
-      border-radius: 4px;
-    }
-
-    /* scrollbar itself */
-    ::-webkit-scrollbar-thumb {
-      background-color: $clr1;
-      border-radius: 4px;
-    }
-
-    /* set button(top and bottom of the scrollbar) */
-    ::-webkit-scrollbar-button {
-      display: none;
-    }
-
-    .cards1,
-    .cards2,
-    .cards3,
-    .cards4,
-    .cards5,
-    .cards6,
-    .cards7,
-    .cards8,
-    .cards9,
-    .cards10,
-    .cards11,
-    .cards12 {
-      width: 100%;
-      height: 100%;
-      overflow-x: auto;
-      padding-right: 4px;
     }
   }
 
