Change some class names

--- a/src/assets/scss/components/_card.scss
+++ b/src/assets/scss/components/_card.scss
@@ -1,4 +1,4 @@
-.card_lgn0 {
+.card_lgnd0 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto 1fr;
@@ -16,7 +16,7 @@
   margin: 0 0 4px;
   background: rgba(119, 113, 106, 0.06);
 
-  .partner {
+  .partner { 
     grid-area: partner;
     padding: 0 8px;
     font-weight: 400;
@@ -44,7 +44,7 @@
   }
 }
 
-.card_lgn1 {
+.card_lgnd1 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto 1fr;
@@ -102,7 +102,7 @@
   }
 }
 
-.card_lgn2 {
+.card_lgnd2 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto 1fr;
@@ -160,7 +160,7 @@
   }
 }
 
-.card_lgn3 {
+.card_lgnd3 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto 1fr;
@@ -218,7 +218,7 @@
   }
 }
 
-.card_lgn4 {
+.card_lgnd4 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto 1fr;
@@ -276,7 +276,7 @@
   }
 }
 
-.card_lgn5 {
+.card_lgnd5 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto 1fr;
@@ -334,7 +334,7 @@
   }
 }
 
-.card_lgn6 {
+.card_lgnd6 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto 1fr;
@@ -390,9 +390,9 @@
     line-height: 12px;
     padding: 8px;
   }
-}
-
-.card_lgn7 {
+} 
+ 
+.card_lgnd7 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto 1fr;
@@ -450,14 +450,14 @@
   }
 }
 
-.card_lgn0,
-.card_lgn1,
-.card_lgn2,
-.card_lgn3,
-.card_lgn4,
-.card_lgn5,
-.card_lgn6,
-.card_lgn7 {
+.card_lgnd0,
+.card_lgnd1,
+.card_lgnd2,
+.card_lgnd3,
+.card_lgnd4,
+.card_lgnd5,
+.card_lgnd6,
+.card_lgnd7 {
   &:hover {
     cursor: pointer;
   }
